Nutch Change Log

* NUTCH-1239 Webgraph should remove deleted pages from segment input (markus)

* NUTCH-1238 Fetcher throughput threshold must start before feeder finished (markus)

* NUTCH-1138 remove LogUtil from trunk and nutch gora (lewismc)

* NUTCH-1231 Upgrade to Tika 1.0 (markus)

* NUTCH-1230 MimeType API deprecated and breaks with Tika 1.0 (markus)

* NUTCH-1235 Upgrade to new Hadoop 0.20.205.0 (markus)

* NUTCH-1217 Update NOTICE.txt to drop some copyrights (lewismc)

* NUTCH-1129 Add freegenerator, domainstats and crawldbscanner to log4j (markus)

* NUTCH-1184 Fetcher to parse and follow Nth degree outlinks (markus)

* NUTCH-1221 Migrate DomainStatistics to MapReduce API (markus)

* NUTCH-1216 Add trivial comment to lib/native/README.txt (lewismc)

* NUTCH-1214 DomainStats tool should be named for what it's doing (markus)

* NUTCH-1213 Pass additional SolrParams when indexing to Solr (ab)

* NUTCH-1211 URLFilterChecker command line help doesn't inform user of 
  STDIN requirements (mattmann)

* NUTCH-1209 Output from ParserChecker Url missing a newline (mattmann)

* NUTCH-1207 ParserChecker to output signature (markus)

* NUTCH-1090 InvertLinks should inform when ignoring internal links (Marek Backmann via markus)

* NUTCH-1174 Outlinks are not properly normalized (markus)

* NUTCH-1203 ParseSegment to show number of milliseconds per parse (markus)

* NUTCH-1185 Decrease solr.commit.size to 250 (markus)

* NUTCH-1180 UpdateDB to backup previous CrawlDB (markus)

* NUTCH-1173 DomainStats doesn't count db_not_modified (markus)

* NUTCH-1155 Host/domain limit in generator is generate.max.count+1 (markus)

* NUTCH-1061 Migrate MoreIndexingFilter from Apache ORO to java.util.regex (markus)

* NUTCH-1178 Incorrect CSV header CrawlDatumCsvOutputFormat (markus)

* NUTCH-1142 Normalization and filtering in WebGraph (markus)

* NUTCH-1153 LinkRank not to log all keys and not to write Hadoop _SUCCESS file (markus)

Release 1.4 - 11/4/2011
