@@ -310,7 +310,6 @@
 
     <!-- fields for index-basic plugin -->
     <field name="host" type="url" stored="false" indexed="true"/>
-    <field name="site" type="string" stored="false" indexed="true"/>
     <field name="url" type="url" stored="true" indexed="true" required="true"/>
     <!-- stored=true for highlighting, use term vectors  and positions for fast highlighting -->
     <field name="content" type="text_general" stored="true" indexed="true"/>
