@@ -22,6 +22,7 @@
         https://issues.apache.org/jira/browse/NUTCH-994
         https://issues.apache.org/jira/browse/NUTCH-997
         https://issues.apache.org/jira/browse/NUTCH-1058
+        https://issues.apache.org/jira/browse/NUTCH-1232
         and
         http://svn.apache.org/viewvc/lucene/dev/branches/branch_3x/solr/
         example/solr/conf/schema.xml?view=markup
@@ -73,8 +74,7 @@
         <field name="boost" type="float" stored="true" indexed="false"/>
 
         <!-- fields for index-basic plugin -->
-        <field name="host" type="url" stored="false" indexed="true"/>
-        <field name="site" type="string" stored="false" indexed="true"/>
+        <field name="host" type="string" stored="false" indexed="true"/>
         <field name="url" type="url" stored="true" indexed="true"
             required="true"/>
         <field name="content" type="text" stored="false" indexed="true"/>
